Refactoring commit